[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgresql_ext"
description = "Extended PostgreSQL provider for pygeoapi"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygeoapi",
    "sqlalchemy",
    "geoalchemy2",
    "pygeofilter",
    "cachetools"
]

[project.optional-dependencies]
gdal-391 = ["gdal==3.9.1"]
gdal-362 = ["gdal==3.6.2"]

[tool.setuptools]
license-files = []
