[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgresql_ext"
description = "Extended PostgreSQL provider for pygeoapi"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygeoapi",
    "SQLAlchemy>2.0",
    "geoalchemy2",
    "pygeofilter",
    "cachetools"
]

[tool.setuptools]
license-files = []
