[project]
name = "postgresql_ext"
description = "Extended PostgreSQL provider for pygeoapi"
version = "0.2.2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygeoapi",
    "SQLAlchemy>2.0",
    "geoalchemy2",
    "pygeofilter",
    "cachetools"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []
